--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@
 
 buildscript {
     ext {
-        kotlin_version = '1.3.41'
+        kotlin_version = '1.3.72'
     }
     repositories {
         google()
@@ -23,7 +23,7 @@ buildscript {
     dependencies{
         // Wait to move to 3.6 until ConstraintLayout related attribute bugs are resolved. See
         // https://issuetracker.google.com/issues/138601946 for more details.
-        classpath 'com.android.tools.build:gradle:3.5.1'
+        classpath 'com.android.tools.build:gradle:4.0.0-beta05'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
